--- a/.github/workflows/strapi-update-manual.yml
+++ b/.github/workflows/strapi-update-manual.yml
@@ -27,6 +27,6 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add node_modules
         git commit -m "Update node_modules" || echo "No changes to commit"
-        git push
+        git push https://${{ secrets.ACTION_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
       env:
         GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
