--- a/.github/workflows/strapi-update-manual.yml
+++ b/.github/workflows/strapi-update-manual.yml
@@ -29,4 +29,4 @@ jobs:
         git commit -m "Update node_modules" || echo "No changes to commit"
         git push https://${{ secrets.ACTION_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
       env:
-        GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.ACTION_TOKENS }}
