--- a/.github/workflows/strapi-update-manual.yml
+++ b/.github/workflows/strapi-update-manual.yml
@@ -7,7 +7,8 @@ jobs:
   update-dependencies:
 
     runs-on: windows-latest
-
+    permissions:
+      contents: write
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -27,6 +28,6 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add node_modules
         git commit -m "Update node_modules" || echo "No changes to commit"
-        git push https://${{ secrets.ACTION_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
+        git push https://${{ secrets.ACTION_TOKEN }}@github.com/BingFengHung/strapi_creator.git HEAD:main
       env:
         GITHUB_TOKEN: ${{ secrets.ACTION_TOKENS }}
