--- a/package.json
+++ b/package.json
@@ -22,7 +22,19 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@strapi/strapi": "^5.5.2",
+    "@strapi/sdk-plugin": "^5.2.8",
     "prettier": "^3.4.2"
+  },
+  "peerDependencies": {
+    "@strapi/strapi": "^5.5.2",
+    "@strapi/sdk-plugin": "^5.2.8"
+  },
+  "strapi": {
+    "kind": "plugin",
+    "name": "my-plugin",
+    "displayName": "",
+    "description": ""
   },
   "name": "my-plugin",
   "description": "",
